--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -67,7 +67,7 @@
                     </li>
 
                     <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="">
+                        <NavLink class="nav-link" href="Consultas/Productos">
                             <span class="icon-data_usage" aria-hidden="true"></span> Productos
                         </NavLink>
                     </li>
@@ -79,7 +79,7 @@
                     </li>
 
                     <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="">
+                        <NavLink class="nav-link" href="Consultas/Usuarios">
                             <span class="icon-data_usage" aria-hidden="true"></span> Usuarios
                         </NavLink>
                     </li>
