--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -19,37 +19,42 @@
             </NavLink>
             @if (stateRegister)
             {
-                <ul class="children">
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="Categorias">
-                            <span class="icon-category" aria-hidden="true"></span> Categoria
-                        </NavLink>
-                    </li>
+        <ul class="children">
+            <li class="list-unstyled">
+                <NavLink class="nav-link" href="Login">
+                    <span class="icon-category" aria-hidden="true"></span> Login
+                </NavLink>
+            </li>
+            <li class="list-unstyled">
+                <NavLink class="nav-link" href="Categorias">
+                    <span class="icon-category" aria-hidden="true"></span> Categoria
+                </NavLink>
+            </li>
 
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="Productos">
-                            <span class="icon-shop_two" aria-hidden="true"></span> Productos
-                        </NavLink>
-                    </li>
+            <li class="list-unstyled">
+                <NavLink class="nav-link" href="Productos">
+                    <span class="icon-shop_two" aria-hidden="true"></span> Productos
+                </NavLink>
+            </li>
 
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="EntradaProductos">
-                            <span class="icon-shopping_basket" aria-hidden="true"></span> Entrada De Productos
-                        </NavLink>
-                    </li>
+            <li class="list-unstyled">
+                <NavLink class="nav-link" href="EntradaProductos">
+                    <span class="icon-shopping_basket" aria-hidden="true"></span> Entrada De Productos
+                </NavLink>
+            </li>
 
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="Clientes">
-                            <span class="icon-person_add" aria-hidden="true"></span> Cliente
-                        </NavLink>
-                    </li>
+            <li class="list-unstyled">
+                <NavLink class="nav-link" href="Clientes">
+                    <span class="icon-person_add" aria-hidden="true"></span> Cliente
+                </NavLink>
+            </li>
 
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="Usuarios">
-                            <span class="icon-people_outline" aria-hidden="true"></span> Usuario
-                        </NavLink>
-                    </li>
-                </ul>
+            <li class="list-unstyled">
+                <NavLink class="nav-link" href="Usuarios">
+                    <span class="icon-people_outline" aria-hidden="true"></span> Usuario
+                </NavLink>
+            </li>
+        </ul>
              }
         </li>
 
@@ -60,25 +65,25 @@
             @if (stateConsultas)
             {
                 <ul class="children">
-                    <li class="nav-item px-3">
+                    <li class="list-unstyled">
                         <NavLink class="nav-link" href="">
                             <span class="icon-data_usage" aria-hidden="true"></span> Categorias
                         </NavLink>
                     </li>
 
-                    <li class="nav-item px-3">
+                    <li class="list-unstyled">
                         <NavLink class="nav-link" href="Consultas/Productos">
                             <span class="icon-data_usage" aria-hidden="true"></span> Productos
                         </NavLink>
                     </li>
 
-                    <li class="nav-item px-3">
+                    <li class="list-unstyled">
                         <NavLink class="nav-link" href="">
                             <span class="icon-data_usage" aria-hidden="true"></span> Clientes
                         </NavLink>
                     </li>
 
-                    <li class="nav-item px-3">
+                    <li class="list-unstyled">
                         <NavLink class="nav-link" href="Consultas/Usuarios">
                             <span class="icon-data_usage" aria-hidden="true"></span> Usuarios
                         </NavLink>
@@ -94,25 +99,25 @@
             @if(stateReportes)
             {
                 <ul class="children">
-                    <li class="nav-item px-3">
+                    <li class="list-unstyled">
                         <NavLink class="nav-link" href="">
                             <span class="icon-show_chart" aria-hidden="true"></span> Categorias
                         </NavLink>
                     </li>
 
-                    <li class="nav-item px-3">
+                    <li class="list-unstyled">
                         <NavLink class="nav-link" href="">
                             <span class="icon-show_chart" aria-hidden="true"></span> Productos
                         </NavLink>
                     </li>
 
-                    <li class="nav-item px-3">
+                    <li class="list-unstyled">
                         <NavLink class="nav-link" href="">
                             <span class="icon-show_chart" aria-hidden="true"></span> Clientes
                         </NavLink>
                     </li>
 
-                    <li class="nav-item px-3">
+                    <li class="list-unstyled">
                         <NavLink class="nav-link" href="">
                             <span class="icon-show_chart" aria-hidden="true"></span> Usuarios
                         </NavLink>
