--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -12,7 +12,7 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-
+        
         <li class="nav-item px-1">
             <NavLink class="nav-link" @onclick="ToggleRegistrosMenu">
                 <span class="icon-add_circle_outline" aria-hidden="true"></span> Registros <span class="icon-arrow_drop_down"></span>
@@ -106,7 +106,7 @@
                     </li>
 
                     <li class="list-unstyled">
-                        <NavLink class="nav-link" href="">
+                        <NavLink class="nav-link" href="Reportes/Productos">
                             <span class="icon-show_chart" aria-hidden="true"></span> Productos
                         </NavLink>
                     </li>
@@ -118,7 +118,7 @@
                     </li>
 
                     <li class="list-unstyled">
-                        <NavLink class="nav-link" href="">
+                        <NavLink class="nav-link" href="Reportes/Usuarios">
                             <span class="icon-show_chart" aria-hidden="true"></span> Usuarios
                         </NavLink>
                     </li>
