--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -7,124 +7,124 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
-        <li class="nav-item px-1">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        
-        <li class="nav-item px-1">
-            <NavLink class="nav-link" @onclick="ToggleRegistrosMenu">
-                <span class="icon-add_circle_outline" aria-hidden="true"></span> Registros <span class="icon-arrow_drop_down"></span>
-            </NavLink>
-            @if (stateRegister)
-            {
-        <ul class="children">
-            <li class="list-unstyled">
-                <NavLink class="nav-link" href="Login">
-                    <span class="icon-category" aria-hidden="true"></span> Login
-                </NavLink>
-            </li>
-            <li class="list-unstyled">
-                <NavLink class="nav-link" href="Categorias">
-                    <span class="icon-category" aria-hidden="true"></span> Categoria
-                </NavLink>
-            </li>
+        <AuthorizeView>
+            <NotAuthorized>
+                <li class="nav-item px-1">
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Home
+                    </NavLink>
+                </li>
+            </NotAuthorized>
+            <Authorized>
+                <li class="nav-item px-1">
+                    <NavLink class="nav-link" @onclick="ToggleRegistrosMenu">
+                        <span class="icon-add_circle_outline" aria-hidden="true"></span> Registros <span class="icon-arrow_drop_down"></span>
+                    </NavLink>
+                    @if (stateRegister)
+                    {
+                        <ul class="children">
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Categorias">
+                                    <span class="icon-category" aria-hidden="true"></span> Categoria
+                                </NavLink>
+                            </li>
 
-            <li class="list-unstyled">
-                <NavLink class="nav-link" href="Productos">
-                    <span class="icon-shop_two" aria-hidden="true"></span> Productos
-                </NavLink>
-            </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Productos">
+                                    <span class="icon-shop_two" aria-hidden="true"></span> Productos
+                                </NavLink>
+                            </li>
 
-            <li class="list-unstyled">
-                <NavLink class="nav-link" href="EntradaProductos">
-                    <span class="icon-shopping_basket" aria-hidden="true"></span> Entrada De Productos
-                </NavLink>
-            </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="EntradaProductos">
+                                    <span class="icon-shopping_basket" aria-hidden="true"></span> Entrada De Productos
+                                </NavLink>
+                            </li>
 
-            <li class="list-unstyled">
-                <NavLink class="nav-link" href="Clientes">
-                    <span class="icon-person_add" aria-hidden="true"></span> Cliente
-                </NavLink>
-            </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Clientes">
+                                    <span class="icon-person_add" aria-hidden="true"></span> Cliente
+                                </NavLink>
+                            </li>
 
-            <li class="list-unstyled">
-                <NavLink class="nav-link" href="Usuarios">
-                    <span class="icon-people_outline" aria-hidden="true"></span> Usuario
-                </NavLink>
-            </li>
-        </ul>
-             }
-        </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Usuarios">
+                                    <span class="icon-people_outline" aria-hidden="true"></span> Usuario
+                                </NavLink>
+                            </li>
+                        </ul>
+                    }
+                </li>
 
-        <li class="nav-item px-1">
-            <NavLink class="nav-link" @onclick="ToggleConsultasMenu">
-                <span class="icon-data_usage" aria-hidden="true"></span> Consultas <span class="icon-arrow_drop_down"></span>
-            </NavLink>
-            @if (stateConsultas)
-            {
-                <ul class="children">
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="">
-                            <span class="icon-data_usage" aria-hidden="true"></span> Categorias
-                        </NavLink>
-                    </li>
+                <li class="nav-item px-1">
+                    <NavLink class="nav-link" @onclick="ToggleConsultasMenu">
+                        <span class="icon-data_usage" aria-hidden="true"></span> Consultas <span class="icon-arrow_drop_down"></span>
+                    </NavLink>
+                    @if (stateConsultas)
+                    {
+                        <ul class="children">
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="">
+                                    <span class="icon-data_usage" aria-hidden="true"></span> Categorias
+                                </NavLink>
+                            </li>
 
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="Consultas/Productos">
-                            <span class="icon-data_usage" aria-hidden="true"></span> Productos
-                        </NavLink>
-                    </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Consultas/Productos">
+                                    <span class="icon-data_usage" aria-hidden="true"></span> Productos
+                                </NavLink>
+                            </li>
 
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="">
-                            <span class="icon-data_usage" aria-hidden="true"></span> Clientes
-                        </NavLink>
-                    </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="">
+                                    <span class="icon-data_usage" aria-hidden="true"></span> Clientes
+                                </NavLink>
+                            </li>
 
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="Consultas/Usuarios">
-                            <span class="icon-data_usage" aria-hidden="true"></span> Usuarios
-                        </NavLink>
-                    </li>
-                </ul>
-             }
-        </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Consultas/Usuarios">
+                                    <span class="icon-data_usage" aria-hidden="true"></span> Usuarios
+                                </NavLink>
+                            </li>
+                        </ul>
+                    }
+                </li>
 
-        <li class="nav-item px-1">
-            <NavLink class="nav-link" @onclick="ToggleReportesMenu">
-                <span class="icon-show_chart" aria-hidden="true"></span> Reportes <span class="icon-arrow_drop_down"></span>
-            </NavLink>
-            @if(stateReportes)
-            {
-                <ul class="children">
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="">
-                            <span class="icon-show_chart" aria-hidden="true"></span> Categorias
-                        </NavLink>
-                    </li>
+                <li class="nav-item px-1">
+                    <NavLink class="nav-link" @onclick="ToggleReportesMenu">
+                        <span class="icon-show_chart" aria-hidden="true"></span> Reportes <span class="icon-arrow_drop_down"></span>
+                    </NavLink>
+                    @if (stateReportes)
+                    {
+                        <ul class="children">
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Categorias
+                                </NavLink>
+                            </li>
 
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="Reportes/Productos">
-                            <span class="icon-show_chart" aria-hidden="true"></span> Productos
-                        </NavLink>
-                    </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Reportes/Productos">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Productos
+                                </NavLink>
+                            </li>
 
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="">
-                            <span class="icon-show_chart" aria-hidden="true"></span> Clientes
-                        </NavLink>
-                    </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Clientes
+                                </NavLink>
+                            </li>
 
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="Reportes/Usuarios">
-                            <span class="icon-show_chart" aria-hidden="true"></span> Usuarios
-                        </NavLink>
-                    </li>
-                </ul>
-             }
-        </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Reportes/Usuarios">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Usuarios
+                                </NavLink>
+                            </li>
+                        </ul>
+                     }
+                </li>
+            </Authorized>
+        </AuthorizeView>
     </ul>
 </div>
 
