--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -1,21 +1,19 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">ButterSoft</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
+﻿<AuthorizeView>
+    <Authorized>
+        <div class="top-row pl-4 navbar navbar-dark">
+            <a class="navbar-brand" href="">ButterSoft</a>
+            <button class="navbar-toggler" @onclick="ToggleNavMenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <AuthorizeView>
-            <NotAuthorized>
+        <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+            <ul class="nav flex-column">
                 <li class="nav-item px-1">
                     <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                         <span class="oi oi-home" aria-hidden="true"></span> Home
                     </NavLink>
                 </li>
-            </NotAuthorized>
-            <Authorized>
                 <li class="nav-item px-1">
                     <NavLink class="nav-link" @onclick="ToggleRegistrosMenu">
                         <span class="icon-add_circle_outline" aria-hidden="true"></span> Registros <span class="icon-arrow_drop_down"></span>
@@ -87,7 +85,7 @@
                                 </NavLink>
                             </li>
                         </ul>
-                    }
+                     }
                 </li>
 
                 <li class="nav-item px-1">
@@ -123,43 +121,41 @@
                         </ul>
                      }
                 </li>
-            </Authorized>
-        </AuthorizeView>
-    </ul>
-</div>
+            </ul>
+        </div>
+    </Authorized>
+</AuthorizeView>
 
-@code {
-        private bool collapseNavMenu = true;
+    @code { private bool collapseNavMenu = true;
 
-        private bool stateRegister = false;
-        private bool stateConsultas = false;
-        private bool stateReportes = false;
+                private bool stateRegister = false;
+                private bool stateConsultas = false;
+                private bool stateReportes = false;
 
-        private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+                private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
-        private void ToggleNavMenu()
-        {
-            collapseNavMenu = !collapseNavMenu;
-        }
+                private void ToggleNavMenu()
+                {
+                    collapseNavMenu = !collapseNavMenu;
+                }
 
-        private void ToggleRegistrosMenu()
-        {
-            stateRegister = !stateRegister;
-            stateConsultas = false;
-            stateReportes = false;
-        }
+                private void ToggleRegistrosMenu()
+                {
+                    stateRegister = !stateRegister;
+                    stateConsultas = false;
+                    stateReportes = false;
+                }
 
-        private void ToggleConsultasMenu()
-        {
-            stateConsultas = !stateConsultas;
-            stateRegister = false;
-            stateReportes = false;
-    }
+                private void ToggleConsultasMenu()
+                {
+                    stateConsultas = !stateConsultas;
+                    stateRegister = false;
+                    stateReportes = false;
+                }
 
-    private void ToggleReportesMenu()
-    {
-        stateReportes = !stateReportes;
-        stateRegister = false;
-        stateConsultas = false;
-    }
-}
+                private void ToggleReportesMenu()
+                {
+                    stateReportes = !stateReportes;
+                    stateRegister = false;
+                    stateConsultas = false;
+                } }
